@@ -37,7 +37,6 @@ sub new
 sub _processWizard
 {
     my ($self) = @_;
-
     $self->_requireParam('orgName', __('Organization Name'));
     my $orgName = $self->param('orgName');
     $self->_requireParam('countryName', __('Country code'));
@@ -49,15 +48,20 @@ sub _processWizard
     $self->_requireParam('expiryDays', __('Days to expire'));
     my $expiryDays = $self->param('expiryDays');
 
-    my $openchange = EBox::Global->modInstance('openchange');
-    my $state = $openchange->get_state();
-    $state->{provision_from_wizard} = {
+    my %certificateArgs =  (
         orgName => $orgName,
         countryName => $countryName,
         localityName => $localityName,
         stateName => $stateName,
         days => $expiryDays
-    };
+    );
+
+    my $ca = EBox::Global->modInstance('ca');
+    $ca->_checkCertificateFieldsCharacters(%certificateArgs);
+
+    my $openchange = EBox::Global->modInstance('openchange');
+    my $state = $openchange->get_state();
+    $state->{provision_from_wizard} = \%certificateArgs;
     $openchange->set_state($state);
 }
 
